Chore: Translate remaining Korean comments and update docs content

--- a/docs/blog/2021-08-01-mdx-blog-post.mdx
+++ b/docs/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,24 +1,16 @@
 ---
-slug: mdx-blog-post
-title: MDX Blog Post
-authors: [slorber]
-tags: [docusaurus]
+slug: mcp-todo-customization
+title: Customizing MCP To Do Automation
+authors: [yamonco]
+tags: [mcp, todo, customization]
 ---
 
-Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
+You can extend MCP-MS-TODO-SERVER with custom tools and workflows.
 
 :::tip
-
-Use the power of React to create interactive blog posts.
-
+Use the MCP tool engine to add new automation logic for your organization.
 :::
 
-{/* truncate */}
+## Example: Add a Custom Tool
 
-For example, use JSX to create an interactive button:
-
-```js
-<button onClick={() => alert('button clicked!')}>Click me!</button>
-```
-
-<button onClick={() => alert('button clicked!')}>Click me!</button>
+See the [README](https://github.com/yamonco/mcp-ms-todo-server) for instructions on adding new tools.
